--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,10 +2,11 @@
 @import url('https://fonts.bunny.net/css?family=Nunito');
 
 // Variables
-@import 'variables';
+@import './variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
+
 
 // Personalizar el fondo del navbar y el footer
 .navbar-brand {
